# STM32_PROJECT

./: build.sh
Classic_with_CMake/Soft_Timer01/: .mxproject  Makefile  Soft_Timer01.ioc  build_and_flash.bat  build_and_flash.sh
Classic_with_CMake/Soft_Timer01/CMakefile/: CommonPath.cmake  Flag.cmake
Classic_with_CMake/Soft_Timer01/Examples/Example_01/: CMakeLists.txt  main.c
Classic_with_CMake/Soft_Timer01/Examples/Example_02/: CMakeLists.txt
Classic_with_CMake/Soft_Timer01/Examples/Example_03/: CMakeLists.txt
Classic_with_CMake/Soft_Timer01/Inc/: FreeRTOSConfig.h  main.h
Classic_with_CMake/Soft_Timer01/Src/: stm32f4xx_hal_msp.c
Using_Mbed_Tools/: choose_to_build.sh
Using_Mbed_Tools/blinky/: CMakeLists.txt  build_and_flash.bat  build_and_flash.sh  main.cpp  test_uart.py
Using_Mbed_Tools/blinky/mbed-os/targets/: targets.json
Using_Mbed_Tools/blinky/mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F411xE/TARGET_NUCLEO_F411RE/: PeripheralPinMaps.h
Using_Mbed_Tools/blinky/mbed-os/targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F411xE/TARGET_STM32F411_DISCOVERY/: PinNames.h
